--- a/src/sass/Pages/home/_picking-place.scss
+++ b/src/sass/Pages/home/_picking-place.scss
@@ -68,8 +68,9 @@
         max-height: 705px;
         border: 1px solid rgba(51, 51, 51, 0.5);
         border-bottom: 1px solid rgba(51, 51, 51, 0.5);
-        width: 20%;
+        width: 30%;
         overflow-y: hidden;
+        overflow-x: hidden;
         &:hover {
           overflow-y: scroll;
           &::-webkit-scrollbar-track {
@@ -97,40 +98,70 @@
           height: 100%;
           background-color: rgba(51, 51, 51, 0.5);
         }
-        .cinema-item {
-          padding: 20px;
-          display: flex;
-          position: relative;
-          &::before {
-            content: "";
-            position: absolute;
-            width: 80%;
-            bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            height: 1px;
-            background-color: rgba(51, 51, 51, 0.5);
+        .nav-item{
+          padding:0;
+          margin:0;
+          width: 100%;
+          &::before{
+            content:"";
+            width:0;
+            background-color: none;
           }
-          &:last-child::before {
-            content: "";
-            position: absolute;
-            width: 80%;
-            bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            height: 1px;
-            background-color: rgba(51, 51, 51, 0);
-          }
-          img {
-            width: 50px;
-            height: 50px;
-          }
-          .cinema-item__detail {
-            padding-left: 20px;
-
-            h5 {
-              font-size: 15px;
-              color: coral;
+          .cinema-item {
+            // padding: 20px;
+            display: block;
+            position: relative;
+            &::before {
+              content: "";
+              position: absolute;
+              width: 80%;
+              bottom: 0;
+              left: 50%;
+              transform: translateX(-50%);
+              height: 1px;
+              background-color: rgba(51, 51, 51, 0.5);
+            }
+            &:last-child::before {
+              content: "";
+              position: absolute;
+              width: 80%;
+              bottom: 0;
+              left: 50%;
+              transform: translateX(-50%);
+              height: 1px;
+              background-color: rgba(51, 51, 51, 0);
+            }
+            img {
+              width: 50px;
+              height: 50px;
+              margin-top: 15px;
+              float:left;
+              // clear:both;
+            }
+            .cinema-item__detail {
+              padding-left: 20px;
+              padding:15px;
+              width:70%;
+              display: inline-block;
+              // float:left;
+              // clear:both;
+  
+              h5 {
+                font-size: 14px;
+                color: coral;
+              }
+              span{
+                display: block;
+                width:100%;
+                line-height: 1.4;
+                font-size: 12px;
+                color: #949494;
+                // width:100%;
+                // overflow: hidden;
+                -o-text-overflow: ellipsis;
+                text-overflow: hidden;
+                white-space: nowrap;
+              }
             }
           }
         }
@@ -139,7 +170,7 @@
         float: left;
         min-height: 705px;
         max-height: 705px;
-        width: calc(100% - 30% - 92px);
+        width: calc(100% - 32% - 92px);
         border: 1px solid rgba(51, 51, 51, 0.5);
         // border-top-right-radius: 4px;
         // border-bottom-right-radius: 4px;
@@ -163,67 +194,73 @@
             // border: 1px solid #000;
           }
         }
-        .movie-item {
-          padding: 20px;
-          position: relative;
-          &::before {
-            content: "";
-            position: absolute;
-            width: 95%;
-            bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            height: 1px;
-            background-color: rgba(51, 51, 51, 0.5);
-          }
-          &:last-child::before {
-            content: "";
-            position: absolute;
-            width: 80%;
-            bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            height: 1px;
-            background-color: rgba(51, 51, 51, 0);
-          }
-          .movie-detail {
-            display: flex;
-            img {
-              width: 50px;
-              height: 50px;
+        .tab-pane:not(.active){
+          display:none;
+        }
+        .tab-pane{
+          
+          .movie-item {
+            padding: 20px;
+            position: relative;
+            &::before {
+              content: "";
+              position: absolute;
+              width: 95%;
+              bottom: 0;
+              left: 50%;
+              transform: translateX(-50%);
+              height: 1px;
+              background-color: rgba(51, 51, 51, 0.5);
             }
-            .movie-item__detail {
-              padding-left: 20px;
-              h5 {
-                font-size: 15px;
+            &:last-child::before {
+              content: "";
+              position: absolute;
+              width: 80%;
+              bottom: 0;
+              left: 50%;
+              transform: translateX(-50%);
+              height: 1px;
+              background-color: rgba(51, 51, 51, 0);
+            }
+            .movie-detail {
+              display: flex;
+              img {
+                width: 50px;
+                height: 50px;
+              }
+              .movie-item__detail {
+                padding-left: 20px;
+                h5 {
+                  font-size: 15px;
+                }
               }
             }
-          }
-          .start-time {
-            a {
-              width: calc(25% - 10px);
-              float: left;
-              font-family: "SF Medium";
-              font-size: 14px;
-              font-weight: 400;
-              margin: 0 10px 10px 0;
-              padding: 5px 0;
-              transition: all 0.2s;
-              text-decoration: none;
-              display: block;
-              text-align: center;
-              background-color: rgba(246, 246, 246, 0.5);
-              border-radius: 7px;
-              color: #9b9b9b;
-              border: 1px solid #e4e4e4;
-              // &:last-child{
-              //   clear:both;
-              // }
-              span {
+            .start-time {
+              a {
+                width: calc(25% - 10px);
+                float: left;
                 font-family: "SF Medium";
-                font-size: 18px;
-                font-weight: 700;
-                color: #108f3e;
+                font-size: 14px;
+                font-weight: 400;
+                margin: 0 10px 10px 0;
+                padding: 5px 0;
+                transition: all 0.2s;
+                text-decoration: none;
+                display: block;
+                text-align: center;
+                background-color: rgba(246, 246, 246, 0.5);
+                border-radius: 7px;
+                color: #9b9b9b;
+                border: 1px solid #e4e4e4;
+                // &:last-child{
+                //   clear:both;
+                // }
+                span {
+                  font-family: "SF Medium";
+                  font-size: 18px;
+                  font-weight: 700;
+                  color: #108f3e;
+                }
               }
             }
           }
