edit suatchieu and pickingplace component

--- a/src/sass/Pages/home/_picking-place.scss
+++ b/src/sass/Pages/home/_picking-place.scss
@@ -236,6 +236,9 @@
               }
             }
             .start-time {
+              p{
+                font-weight: 700;
+              }
               a {
                 width: calc(25% - 10px);
                 float: left;
