--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,8 @@
 @import "Pages/home/selling-list";
 @import "Pages/home/picking-place";
 @import "Pages/user/user-login";
+@import "Pages/user/booking";
+@import "Pages/user/seat";
 
 // @import "Page/home/offer";
 // @import "Page/home/billboard";
