adding booking-info components

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@
 @import "Pages/user/user-login";
 @import "Pages/user/booking";
 @import "Pages/user/seat";
+@import "Pages/user/booking-info";
 
 // @import "Page/home/offer";
 // @import "Page/home/billboard";
