Firts Push HuyBranch

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,7 +6,7 @@
 @import "Pages/home/carousel";
 @import "Pages/home/selling-list";
 @import "Pages/home/picking-place";
-
+@import "Pages/home/detail-movie";
 // @import "Page/home/offer";
 // @import "Page/home/billboard";
 // @import "Page/home/sweetdeal";
