--- a/src/sass/Pages/user/_booking-info.scss
+++ b/src/sass/Pages/user/_booking-info.scss
@@ -37,7 +37,7 @@
             font-family: "SF Medium";
             color: #44c020;
             .cash{
-                width: 26%;
+                width: 100%;
                 text-align: center;
                 position: absolute;
                 top: 50%;
@@ -51,6 +51,10 @@
             border-bottom: 1px dashed #e9e9e9;
             padding-bottom: 12.5px;
             padding-left: 5%;
+            width:100%;
+            .tenPhim{
+                font-weight: 600;
+            }
             .content-cinema{
                 margin-top: 5px;
                 font-size: 14px;
@@ -137,11 +141,13 @@
         bottom: 0;
         padding-top: 15px;
         height: 60px;
-        cursor: pointer;
+        // cursor: pointer;
         text-align: center;
         color: #e9e9e9;
         font-size: 22px;
         font-weight: 600;
-        background-image: linear-gradient(223deg,#b4ec51 0,#429321 100%);
+        // background-image: linear-gradient(223deg,#b4ec51 0,#429321 100%);
+        width:100%;
+        outline:none;
     }
 }
