install material ui/core .../icon adding dashboard admin page

--- a/src/sass/Pages/home/_picking-place.scss
+++ b/src/sass/Pages/home/_picking-place.scss
@@ -41,10 +41,6 @@
           background-color: transparent;
           opacity: 1;
         }
-        a {
-          img {
-          }
-        }
       }
     }
   }
@@ -56,11 +52,11 @@
       width: 100%;
       display: inline-block;
       align-items: center;
-      .advertisment {
-        // width: 10%;
-        // float: left;
-        // height: 705px;
-      }
+      // .advertisment {
+      //   // width: 10%;
+      //   // float: left;
+      //   // height: 705px;
+      // }
       .list-cinemas {
         float: left;
         margin-left: 10%;
