edit loading page and dashboard user page

--- a/src/sass/Pages/user/_seat.scss
+++ b/src/sass/Pages/user/_seat.scss
@@ -21,21 +21,21 @@
         width: 100%;
       }
     }
-    .isLoading{
-      text-align: center;
-      position: relative;
-      .sc-fMiknA{
-        color:#9b9b9b;
-      }
-      p{
-        position: absolute;
-        bottom: -70px;
-        left: 50%;
-        transform: translate(-50%,0);
-        color:#9b9b9b ;
-        font-weight: 600;
-      }
-    }
+    // .isLoading{
+    //   text-align: center;
+    //   position: relative;
+    //   .sc-fMiknA{
+    //     color:#9b9b9b;
+    //   }
+    //   p{
+    //     position: absolute;
+    //     bottom: -70px;
+    //     left: 50%;
+    //     transform: translate(-50%,0);
+    //     color:#9b9b9b ;
+    //     font-weight: 600;
+    //   }
+    // }
     .seats__position {
       // height: 400px;
       text-align: center;
