--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,6 +6,7 @@
 @import "Pages/home/carousel";
 @import "Pages/home/selling-list";
 @import "Pages/home/picking-place";
+@import "Pages/home/detail_movie";
 @import "Pages/user/user-login";
 @import "Pages/user/booking";
 @import "Pages/user/seat";
