edit booking page and homepage

--- a/src/sass/Pages/home/_picking-place.scss
+++ b/src/sass/Pages/home/_picking-place.scss
@@ -94,8 +94,8 @@
           height: 100%;
           background-color: rgba(51, 51, 51, 0.5);
         }
-        .nav-item{
-          padding:0;
+        .branch-item{
+          padding:15px;
           margin:0;
           width: 100%;
           &::before{
@@ -130,13 +130,13 @@
             img {
               width: 50px;
               height: 50px;
-              margin-top: 15px;
+              // margin-top: 15px;
               float:left;
               // clear:both;
             }
             .cinema-item__detail {
               padding-left: 20px;
-              padding:15px;
+              // padding:15px;  
               width:70%;
               display: inline-block;
               // float:left;
@@ -145,17 +145,19 @@
               h5 {
                 font-size: 14px;
                 color: coral;
+                margin-bottom:0;
+                padding:0;
               }
-              span{
+              p{
                 display: block;
                 width:100%;
                 line-height: 1.4;
                 font-size: 12px;
                 color: #949494;
                 // width:100%;
-                // overflow: hidden;
-                -o-text-overflow: ellipsis;
-                text-overflow: hidden;
+                overflow: hidden;
+                // -o-text-overflow: ellipsis;
+                text-overflow: ellipsis;
                 white-space: nowrap;
               }
             }
