--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@
 @import "Pages/user/booking";
 @import "Pages/user/seat";
 @import "Pages/user/booking-info";
+@import "Pages/home/detail_movie_show_time"
 
 // @import "Page/home/offer";
 // @import "Page/home/billboard";
