--- a/src/sass/Pages/home/_picking-place.scss
+++ b/src/sass/Pages/home/_picking-place.scss
@@ -60,7 +60,7 @@
       .list-cinemas {
         float: left;
         margin-left: 10%;
-        min-height: 705px;
+        height: 705px;
         max-height: 705px;
         border: 1px solid rgba(51, 51, 51, 0.5);
         border-bottom: 1px solid rgba(51, 51, 51, 0.5);
@@ -96,12 +96,28 @@
         }
         .branch-item{
           padding:15px;
-          margin:0;
+          float:left;
+          clear:both;
+          // margin:0;
+          position: relative;
+          // padding:0;
           width: 100%;
+          height: 100px;
+          border-left: none;
+          // border-top:none;
+          // border-bottom: 1px solid rgba(51, 51, 51, 0.5);
           &::before{
             content:"";
             width:0;
             background-color: none;
+          }
+          &:first-child{
+            border-top:none;
+            padding-top: 20px;
+          }
+          &:last-child{
+            border-right:none;
+            // padding-top: 20px;
           }
           .cinema-item {
             // padding: 20px;
@@ -150,7 +166,7 @@
               }
               p{
                 display: block;
-                width:100%;
+                width:120%;
                 line-height: 1.4;
                 font-size: 12px;
                 color: #949494;
