--- a/src/sass/Pages/home/_selling-list.scss
+++ b/src/sass/Pages/home/_selling-list.scss
@@ -474,7 +474,7 @@
               }
             }
             h2 {
-              height: 42px;
+              // height: 42px;
               max-height: 42px;
               font-family: "SF Medium";
               font-size: 16px;
