--- a/src/sass/Pages/home/_selling-list.scss
+++ b/src/sass/Pages/home/_selling-list.scss
@@ -66,7 +66,7 @@
         background-color: white;
         max-height: 300px;
         overflow-y: scroll;
-        z-index: 1000 !important;
+        z-index: 9000 !important;
         box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
         background-clip: padding-box;
         border: 1px solid rgba(0, 0, 0, 0.15);
@@ -93,6 +93,7 @@
           list-style-type: none;
           background-color: #fff;
           transition: all 0.2s;
+          cursor: pointer;
           
         z-index: 1000 !important;
           &:hover {
@@ -138,6 +139,52 @@
           border-right-color: rgba(238, 238, 238, 0.88);
         }
       }
+      .selectScroll {
+        display: none;
+        position: absolute;
+        padding: 5px 0;
+        margin: 2px 0 0;
+        border: 1px solid groove;
+        bottom: 75%;
+        background-color: white;
+        max-height: 300px;
+        overflow-y: scroll;
+        z-index: 9000 !important;
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+        background-clip: padding-box;
+        border: 1px solid rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+        &::-webkit-scrollbar-track {
+          border: none;
+          padding: 2px 0;
+          background-color: #d1d0d0;
+        }
+        &::-webkit-scrollbar {
+          width: 5px;
+        }
+        &::-webkit-scrollbar-thumb {
+          border-radius: 5px;
+          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+          background-color: #949191;
+          // border: 1px solid #000;
+        }
+
+        &.active {
+          display: block;
+        }
+        li {
+          list-style-type: none;
+          background-color: #fff;
+          transition: all 0.2s;
+          cursor: pointer;
+          z-index: 9000 !important;
+        // z-index: 1000 !important;
+          &:hover {
+            background-color: #60c5ef;
+            color: #fff;
+          }
+        }
+      }
     }
     .selectDate {
       width: calc(70% / 4);
@@ -173,6 +220,52 @@
           transform: translateY(-50%);
           border-right: 1px solid #fff;
           border-right-color: rgba(238, 238, 238, 0.88);
+        }
+      }
+      .selectScroll {
+        display: none;
+        position: absolute;
+        padding: 5px 0;
+        margin: 2px 0 0;
+        border: 1px solid groove;
+        bottom: 75%;
+        background-color: white;
+        max-height: 300px;
+        overflow-y: scroll;
+        z-index: 1000 !important;
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+        background-clip: padding-box;
+        border: 1px solid rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+        &::-webkit-scrollbar-track {
+          border: none;
+          padding: 2px 0;
+          background-color: #d1d0d0;
+        }
+        &::-webkit-scrollbar {
+          width: 5px;
+        }
+        &::-webkit-scrollbar-thumb {
+          border-radius: 5px;
+          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+          background-color: #949191;
+          // border: 1px solid #000;
+        }
+
+        &.active {
+          display: block;
+        }
+        li {
+          list-style-type: none;
+          background-color: #fff;
+          transition: all 0.2s;
+          cursor: pointer;
+          
+        z-index: 1000 !important;
+          &:hover {
+            background-color: #60c5ef;
+            color: #fff;
+          }
         }
       }
     }
@@ -214,6 +307,52 @@
           border-right-color: rgba(238, 238, 238, 0.88);
         }
       }
+      .selectScroll {
+        display: none;
+        position: absolute;
+        padding: 5px 0;
+        margin: 2px 0 0;
+        border: 1px solid groove;
+        bottom: 75%;
+        background-color: white;
+        max-height: 300px;
+        overflow-y: scroll;
+        z-index: 1000 !important;
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+        background-clip: padding-box;
+        border: 1px solid rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+        &::-webkit-scrollbar-track {
+          border: none;
+          padding: 2px 0;
+          background-color: #d1d0d0;
+        }
+        &::-webkit-scrollbar {
+          width: 5px;
+        }
+        &::-webkit-scrollbar-thumb {
+          border-radius: 5px;
+          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+          background-color: #949191;
+          // border: 1px solid #000;
+        }
+
+        &.active {
+          display: block;
+        }
+        li {
+          list-style-type: none;
+          background-color: #fff;
+          transition: all 0.2s;
+          cursor: pointer;
+          
+          z-index: 1000 !important;
+          &:hover {
+            background-color: #60c5ef;
+            color: #fff;
+          }
+        }
+      }
     }
     .buyFast {
       width: calc(70% / 4);
@@ -230,6 +369,9 @@
         left: 50%;
         transform: translate(-50%, -50%);
         padding: 10px 25px;
+        &.active{
+          background-color: $color-orange-main;
+        }
       }
     }
   }
