Responsive booking left right content , cards at HomePage Hover ...

--- a/src/sass/Pages/user/_booking-info.scss
+++ b/src/sass/Pages/user/_booking-info.scss
@@ -151,3 +151,10 @@
         outline:none;
     }
 }
+
+@media only screen and (max-width:768px){
+    .right__content{
+      width: 100%;
+      position: relative;
+    }
+  }
