--- a/src/sass/Pages/user/_booking.scss
+++ b/src/sass/Pages/user/_booking.scss
@@ -68,4 +68,13 @@
       }
     }
   }
+
+  @media only screen and (max-width:768px){
+    .left__content{
+      width: 100%;
+      .info__navbar{
+        display: none;
+      }
+    }
+  }
   
