--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@
 // @import "Helpers/mixin";
 // @import "Layout/header";
 @import "Pages/home/carousel";
+@import "Pages/home/picking-fast";
 @import "Pages/home/selling-list";
 @import "Pages/home/picking-place";
 @import "Pages/home/detail_movie";
