--- a/src/sass/Pages/home/_picking-place.scss
+++ b/src/sass/Pages/home/_picking-place.scss
@@ -1,4 +1,4 @@
-.picking-place {
+#pickBrand {
   padding-top: 40px;
   .nav {
     .nav-item {
@@ -44,9 +44,9 @@
       }
     }
   }
-  .tab-content {
+  .movie-branch {
     width: 100%;
-    .tab-pane {
+    .movie-branch__wrapper {
       padding: 0;
       // justify-content: center;
       // border: 1px solid rgba(51, 51, 51, 0.5);
@@ -356,6 +356,9 @@
         padding: 7px;
         .cinema-item{
           display: flex;
+          img{
+            display:none;
+          }
           .cinema-item__detail{
             // padding-left: 2px;
             // display:flex;
@@ -375,9 +378,17 @@
     @media screen and (max-width:768px){
       margin-left: 3%;
     }
+    @media screen and (max-width:375px){
+      width: 30%;
+    }
   }
   #listMovies{
     @media screen and (max-width:992px){
+      // width: calc(100% - 32% - 92px);
+      width: 65%;
+      
+    }
+    @media screen and (max-width:375px){
       // width: calc(100% - 32% - 92px);
       width: 65%;
       
